--- a/app/src/main/res/layout/activity_game_new.xml
+++ b/app/src/main/res/layout/activity_game_new.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/FullscreenThemeBlack"
-    tools:context=".activity.GameActivity">
+    tools:context=".activity.GameActivityNew">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
